--- a/7_1_tips.ipynb
+++ b/7_1_tips.ipynb
@@ -34,7 +34,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f4af4585f90>"
+       "<torch._C.Generator at 0x7f0708f8ffb0>"
       ]
      },
      "execution_count": 2,
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Model and Data"
+    "## Training and Test Datasets"
    ]
   },
   {
@@ -60,12 +60,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train = torch.FloatTensor([[73, 80, 75],\n",
-    "                             [93, 88, 93],\n",
-    "                             [89, 91, 90],\n",
-    "                             [96, 98, 100],\n",
-    "                             [73, 66, 70]])\n",
-    "y_train = torch.FloatTensor([[152], [185], [180], [196], [142]])"
+    "x_train = torch.FloatTensor([[1, 2, 1], [1, 3, 2], [1, 3, 4], [1, 5, 5], [1, 7, 5], [1, 2, 5], [1, 6, 6], [1, 7, 7]])\n",
+    "y_train = torch.LongTensor([2, 2, 2, 1, 1, 1, 0, 0])"
    ]
   },
   {
@@ -74,13 +70,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class LinearRegressionModel(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super().__init__()\n",
-    "        self.linear = nn.Linear(3, 1)\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        return self.linear(x)"
+    "x_test = torch.FloatTensor([[2, 1, 1], [3, 1, 2], [3, 3, 4]])\n",
+    "y_test = torch.LongTensor([2, 2, 2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model"
    ]
   },
   {
@@ -89,7 +87,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = LinearRegressionModel()"
+    "class SoftmaxClassifierModel(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.linear = nn.Linear(3, 3)\n",
+    "    def forward(self, x):\n",
+    "        return self.linear(x)"
    ]
   },
   {
@@ -98,26 +101,113 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "model = SoftmaxClassifierModel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# optimizer 설정\n",
+    "optimizer = optim.SGD(model.parameters(), lr=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def train(model, optimizer, x_train, y_train):\n",
-    "    nb_epochs=1000\n",
+    "    nb_epochs = 20\n",
     "    for epoch in range(nb_epochs):\n",
     "\n",
     "        # H(x) 계산\n",
     "        prediction = model(x_train)\n",
     "\n",
     "        # cost 계산\n",
-    "        cost = F.mse_loss(prediction, y_train)\n",
+    "        cost = F.cross_entropy(prediction, y_train)\n",
     "\n",
     "        # cost로 H(x) 개선\n",
     "        optimizer.zero_grad()\n",
     "        cost.backward()\n",
     "        optimizer.step()\n",
     "\n",
-    "        # 20번마다 로그 출력\n",
-    "        if epoch % 100 == 99:\n",
-    "            print('Epoch {:4d}/{} Cost: {:.6f}'.format(\n",
-    "                epoch+1, nb_epochs, cost.item()\n",
-    "            ))"
+    "        print('Epoch {:4d}/{} Cost: {:.6f}'.format(\n",
+    "            epoch, nb_epochs, cost.item()\n",
+    "        ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test(model, optimizer, x_test, y_test):\n",
+    "    prediction = model(x_test)\n",
+    "    predicted_classes = prediction.max(1)[1]\n",
+    "    correct_count = (predicted_classes == y_test).sum().item()\n",
+    "    cost = F.cross_entropy(prediction, y_test)\n",
+    "\n",
+    "    print('Accuracy: {}% Cost: {:.6f}'.format(\n",
+    "         correct_count / len(y_test) * 100, cost.item()\n",
+    "    ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch    0/20 Cost: 2.203667\n",
+      "Epoch    1/20 Cost: 1.199645\n",
+      "Epoch    2/20 Cost: 1.142985\n",
+      "Epoch    3/20 Cost: 1.117769\n",
+      "Epoch    4/20 Cost: 1.100901\n",
+      "Epoch    5/20 Cost: 1.089523\n",
+      "Epoch    6/20 Cost: 1.079872\n",
+      "Epoch    7/20 Cost: 1.071320\n",
+      "Epoch    8/20 Cost: 1.063325\n",
+      "Epoch    9/20 Cost: 1.055720\n",
+      "Epoch   10/20 Cost: 1.048378\n",
+      "Epoch   11/20 Cost: 1.041245\n",
+      "Epoch   12/20 Cost: 1.034285\n",
+      "Epoch   13/20 Cost: 1.027478\n",
+      "Epoch   14/20 Cost: 1.020813\n",
+      "Epoch   15/20 Cost: 1.014279\n",
+      "Epoch   16/20 Cost: 1.007872\n",
+      "Epoch   17/20 Cost: 1.001586\n",
+      "Epoch   18/20 Cost: 0.995419\n",
+      "Epoch   19/20 Cost: 0.989365\n"
+     ]
+    }
+   ],
+   "source": [
+    "train(model, optimizer, x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.0% Cost: 1.425844\n"
+     ]
+    }
+   ],
+   "source": [
+    "test(model, optimizer, x_test, y_test)"
    ]
   },
   {
@@ -150,41 +240,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = LinearRegressionModel()"
+    "model = SoftmaxClassifierModel()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = optim.SGD(model.parameters(), lr=1e10)"
+    "optimizer = optim.SGD(model.parameters(), lr=1e5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch  100/1000 Cost: nan\n",
-      "Epoch  200/1000 Cost: nan\n",
-      "Epoch  300/1000 Cost: nan\n",
-      "Epoch  400/1000 Cost: nan\n",
-      "Epoch  500/1000 Cost: nan\n",
-      "Epoch  600/1000 Cost: nan\n",
-      "Epoch  700/1000 Cost: nan\n",
-      "Epoch  800/1000 Cost: nan\n",
-      "Epoch  900/1000 Cost: nan\n",
-      "Epoch 1000/1000 Cost: nan\n"
+      "Epoch    0/20 Cost: 1.280268\n",
+      "Epoch    1/20 Cost: 976950.812500\n",
+      "Epoch    2/20 Cost: 1279135.125000\n",
+      "Epoch    3/20 Cost: 1198379.000000\n",
+      "Epoch    4/20 Cost: 1098825.875000\n",
+      "Epoch    5/20 Cost: 1968197.625000\n",
+      "Epoch    6/20 Cost: 284763.250000\n",
+      "Epoch    7/20 Cost: 1532260.125000\n",
+      "Epoch    8/20 Cost: 1651504.000000\n",
+      "Epoch    9/20 Cost: 521878.500000\n",
+      "Epoch   10/20 Cost: 1397263.250000\n",
+      "Epoch   11/20 Cost: 750986.250000\n",
+      "Epoch   12/20 Cost: 918691.500000\n",
+      "Epoch   13/20 Cost: 1487888.250000\n",
+      "Epoch   14/20 Cost: 1582260.125000\n",
+      "Epoch   15/20 Cost: 685818.062500\n",
+      "Epoch   16/20 Cost: 1140048.750000\n",
+      "Epoch   17/20 Cost: 940566.500000\n",
+      "Epoch   18/20 Cost: 931638.250000\n",
+      "Epoch   19/20 Cost: 1971322.625000\n"
      ]
     }
    ],
@@ -201,16 +301,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = LinearRegressionModel()"
+    "model = SoftmaxClassifierModel()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,23 +319,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch  100/1000 Cost: 24799.750000\n",
-      "Epoch  200/1000 Cost: 24777.947266\n",
-      "Epoch  300/1000 Cost: 24756.156250\n",
-      "Epoch  400/1000 Cost: 24734.392578\n",
-      "Epoch  500/1000 Cost: 24712.638672\n",
-      "Epoch  600/1000 Cost: 24690.894531\n",
-      "Epoch  700/1000 Cost: 24669.171875\n",
-      "Epoch  800/1000 Cost: 24647.464844\n",
-      "Epoch  900/1000 Cost: 24625.773438\n",
-      "Epoch 1000/1000 Cost: 24604.101562\n"
+      "Epoch    0/20 Cost: 3.187324\n",
+      "Epoch    1/20 Cost: 3.187324\n",
+      "Epoch    2/20 Cost: 3.187324\n",
+      "Epoch    3/20 Cost: 3.187324\n",
+      "Epoch    4/20 Cost: 3.187324\n",
+      "Epoch    5/20 Cost: 3.187324\n",
+      "Epoch    6/20 Cost: 3.187324\n",
+      "Epoch    7/20 Cost: 3.187324\n",
+      "Epoch    8/20 Cost: 3.187324\n",
+      "Epoch    9/20 Cost: 3.187324\n",
+      "Epoch   10/20 Cost: 3.187324\n",
+      "Epoch   11/20 Cost: 3.187324\n",
+      "Epoch   12/20 Cost: 3.187324\n",
+      "Epoch   13/20 Cost: 3.187324\n",
+      "Epoch   14/20 Cost: 3.187324\n",
+      "Epoch   15/20 Cost: 3.187324\n",
+      "Epoch   16/20 Cost: 3.187324\n",
+      "Epoch   17/20 Cost: 3.187324\n",
+      "Epoch   18/20 Cost: 3.187324\n",
+      "Epoch   19/20 Cost: 3.187324\n"
      ]
     }
    ],
@@ -252,41 +362,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = LinearRegressionModel()"
+    "model = SoftmaxClassifierModel()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = optim.SGD(model.parameters(), lr=1e-5)"
+    "optimizer = optim.SGD(model.parameters(), lr=1e-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch  100/1000 Cost: 0.267423\n",
-      "Epoch  200/1000 Cost: 0.266821\n",
-      "Epoch  300/1000 Cost: 0.266243\n",
-      "Epoch  400/1000 Cost: 0.265660\n",
-      "Epoch  500/1000 Cost: 0.265089\n",
-      "Epoch  600/1000 Cost: 0.264528\n",
-      "Epoch  700/1000 Cost: 0.263967\n",
-      "Epoch  800/1000 Cost: 0.263421\n",
-      "Epoch  900/1000 Cost: 0.262884\n",
-      "Epoch 1000/1000 Cost: 0.262342\n"
+      "Epoch    0/20 Cost: 1.341573\n",
+      "Epoch    1/20 Cost: 1.198802\n",
+      "Epoch    2/20 Cost: 1.150877\n",
+      "Epoch    3/20 Cost: 1.131977\n",
+      "Epoch    4/20 Cost: 1.116242\n",
+      "Epoch    5/20 Cost: 1.102514\n",
+      "Epoch    6/20 Cost: 1.089676\n",
+      "Epoch    7/20 Cost: 1.077479\n",
+      "Epoch    8/20 Cost: 1.065775\n",
+      "Epoch    9/20 Cost: 1.054511\n",
+      "Epoch   10/20 Cost: 1.043655\n",
+      "Epoch   11/20 Cost: 1.033187\n",
+      "Epoch   12/20 Cost: 1.023091\n",
+      "Epoch   13/20 Cost: 1.013356\n",
+      "Epoch   14/20 Cost: 1.003968\n",
+      "Epoch   15/20 Cost: 0.994917\n",
+      "Epoch   16/20 Cost: 0.986189\n",
+      "Epoch   17/20 Cost: 0.977775\n",
+      "Epoch   18/20 Cost: 0.969660\n",
+      "Epoch   19/20 Cost: 0.961836\n"
      ]
     }
    ],
@@ -310,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -393,16 +513,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = LinearRegressionModel()"
+    "class MultivariateLinearRegressionModel(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.linear = nn.Linear(3, 1)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return self.linear(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = MultivariateLinearRegressionModel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,23 +546,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(model, optimizer, x_train, y_train):\n",
+    "    nb_epochs = 20\n",
+    "    for epoch in range(nb_epochs):\n",
+    "\n",
+    "        # H(x) 계산\n",
+    "        prediction = model(x_train)\n",
+    "\n",
+    "        # cost 계산\n",
+    "        cost = F.mse_loss(prediction, y_train)\n",
+    "\n",
+    "        # cost로 H(x) 개선\n",
+    "        optimizer.zero_grad()\n",
+    "        cost.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        print('Epoch {:4d}/{} Cost: {:.6f}'.format(\n",
+    "            epoch, nb_epochs, cost.item()\n",
+    "        ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch  100/1000 Cost: 0.122644\n",
-      "Epoch  200/1000 Cost: 0.106512\n",
-      "Epoch  300/1000 Cost: 0.106047\n",
-      "Epoch  400/1000 Cost: 0.105922\n",
-      "Epoch  500/1000 Cost: 0.105811\n",
-      "Epoch  600/1000 Cost: 0.105708\n",
-      "Epoch  700/1000 Cost: 0.105609\n",
-      "Epoch  800/1000 Cost: 0.105521\n",
-      "Epoch  900/1000 Cost: 0.105439\n",
-      "Epoch 1000/1000 Cost: 0.105359\n"
+      "Epoch    0/20 Cost: 29785.091797\n",
+      "Epoch    1/20 Cost: 18906.164062\n",
+      "Epoch    2/20 Cost: 12054.674805\n",
+      "Epoch    3/20 Cost: 7702.029297\n",
+      "Epoch    4/20 Cost: 4925.733398\n",
+      "Epoch    5/20 Cost: 3151.632568\n",
+      "Epoch    6/20 Cost: 2016.996094\n",
+      "Epoch    7/20 Cost: 1291.051270\n",
+      "Epoch    8/20 Cost: 826.505310\n",
+      "Epoch    9/20 Cost: 529.207336\n",
+      "Epoch   10/20 Cost: 338.934204\n",
+      "Epoch   11/20 Cost: 217.153549\n",
+      "Epoch   12/20 Cost: 139.206741\n",
+      "Epoch   13/20 Cost: 89.313782\n",
+      "Epoch   14/20 Cost: 57.375462\n",
+      "Epoch   15/20 Cost: 36.928429\n",
+      "Epoch   16/20 Cost: 23.835772\n",
+      "Epoch   17/20 Cost: 15.450428\n",
+      "Epoch   18/20 Cost: 10.077808\n",
+      "Epoch   19/20 Cost: 6.633700\n"
      ]
     }
    ],
@@ -469,12 +640,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "def train_with_regularization(model, optimizer, x_train, y_train):\n",
-    "    nb_epochs=1000\n",
+    "    nb_epochs = 20\n",
     "    for epoch in range(nb_epochs):\n",
     "\n",
     "        # H(x) 계산\n",
@@ -495,25 +666,23 @@
     "        cost.backward()\n",
     "        optimizer.step()\n",
     "\n",
-    "        # 20번마다 로그 출력\n",
-    "        if epoch % 100 == 99:\n",
-    "            print('Epoch {:4d}/{} Cost: {:.6f}'.format(\n",
-    "                epoch+1, nb_epochs, cost.item()\n",
-    "            ))"
+    "        print('Epoch {:4d}/{} Cost: {:.6f}'.format(\n",
+    "            epoch+1, nb_epochs, cost.item()\n",
+    "        ))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = LinearRegressionModel()"
+    "model = MultivariateLinearRegressionModel()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,23 +691,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch  100/1000 Cost: 184.486572\n",
-      "Epoch  200/1000 Cost: 184.483932\n",
-      "Epoch  300/1000 Cost: 184.483917\n",
-      "Epoch  400/1000 Cost: 184.483917\n",
-      "Epoch  500/1000 Cost: 184.483917\n",
-      "Epoch  600/1000 Cost: 184.483917\n",
-      "Epoch  700/1000 Cost: 184.483932\n",
-      "Epoch  800/1000 Cost: 184.483917\n",
-      "Epoch  900/1000 Cost: 184.483917\n",
-      "Epoch 1000/1000 Cost: 184.483917\n"
+      "Epoch    1/20 Cost: 29477.810547\n",
+      "Epoch    2/20 Cost: 18798.513672\n",
+      "Epoch    3/20 Cost: 12059.364258\n",
+      "Epoch    4/20 Cost: 7773.400879\n",
+      "Epoch    5/20 Cost: 5038.263672\n",
+      "Epoch    6/20 Cost: 3290.066406\n",
+      "Epoch    7/20 Cost: 2171.882568\n",
+      "Epoch    8/20 Cost: 1456.434570\n",
+      "Epoch    9/20 Cost: 998.598267\n",
+      "Epoch   10/20 Cost: 705.595398\n",
+      "Epoch   11/20 Cost: 518.073608\n",
+      "Epoch   12/20 Cost: 398.057220\n",
+      "Epoch   13/20 Cost: 321.242920\n",
+      "Epoch   14/20 Cost: 272.078247\n",
+      "Epoch   15/20 Cost: 240.609131\n",
+      "Epoch   16/20 Cost: 220.465637\n",
+      "Epoch   17/20 Cost: 207.570602\n",
+      "Epoch   18/20 Cost: 199.314804\n",
+      "Epoch   19/20 Cost: 194.028214\n",
+      "Epoch   20/20 Cost: 190.642014\n"
      ]
     }
    ],
